forgot to add the publishing code to the result block

--- a/emacs/config.org
+++ b/emacs/config.org
@@ -2996,6 +2996,7 @@ If the region is not active, use the current line."
 #+name: org
 #+begin_src emacs-lisp
 <<org--tors-reading-list>>
+<<org--publishing>>
 <<org--agenda-utilities>>
 <<org--main>>
 
